nobase_include_HEADERS = \
	lttng/marker.h \
	lttng/tracepoint.h \
	lttng/tracepoint-event.h \
	lttng/ust-tracepoint-event.h \
	lttng/ust-tracepoint-event-reset.h \
	lttng/ust-events.h \
	lttng/ust-ctl.h \
	lttng/version.h \
	lttng/ust-abi.h \
	lttng/ust-comm.h \
	lttng/ringbuffer-abi.h \
	lttng/ust-tracer.h \
	lttng/usterr-signal-safe.h \
	lttng/config.h \
	lttng/share.h \
	lttng/ust.h \
	lttng/core.h

# note: usterr-signal-safe.h, core.h and share.h need namespace cleanup.

noinst_HEADERS = \
	usterr.h \
	ust_snprintf.h \
	lttng/compat.h \
	lttng/marker-internal.h \
	lttng/tracepoint-internal.h \
	lttng/clock.h \
	lttng/probe-internal.h \
	lttng/kcompat/kcompat.h \
	lttng/kcompat/jhash.h \
	lttng/kcompat/compiler.h \
	lttng/kcompat/types.h \
	lttng/stringify.h \
	lttng/wait.h \
	lttng/ringbuffer-config.h \
	lttng/processor.h
