nobase_include_HEADERS = \
	lttng/tracepoint.h \
	lttng/tracepoint-rcu.h \
	lttng/tracepoint-types.h \
	lttng/tracepoint-event.h \
	lttng/ust-tracepoint-event.h \
	lttng/ust-tracepoint-event-reset.h \
	lttng/ust-events.h \
	lttng/ust-ctl.h \
	lttng/ust-version.h \
	lttng/ust-abi.h \
	lttng/ringbuffer-abi.h \
	lttng/ust-tracer.h \
	lttng/ust-config.h \
	lttng/ust.h \
	lttng/ust-endian.h \
	lttng/ringbuffer-config.h \
	lttng/align.h \
	lttng/bug.h

# note: usterr-signal-safe.h, core.h and share.h need namespace cleanup.

noinst_HEADERS = \
	usterr.h \
	usterr-signal-safe.h \
	ust_snprintf.h \
	ust-comm.h \
	lttng/ust-tid.h \
	lttng/bitfield.h \
	helper.h \
	share.h
